--- a/source/bower.json
+++ b/source/bower.json
@@ -13,5 +13,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "bootstrap": "v4.0.0-alpha.2",
+    "tether": "^1.3.3"
+  }
 }
